Ограничение доступа к админ-панели

--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
@@ -14,7 +14,6 @@
     {% endblock %}
 </head>
 <body>
-Admin
 {% block body %}{% endblock %}
 </body>
 </html>
