--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/admin.html.twig' %}
 {% block body %}
-
+    <a href="{{ path('app_logout') }}">Выход</a>
     <h1>
         {{ title }}
     </h1>
