Сверстана страница Prayer Request

--- a/src/Markup/src/style/main.scss
+++ b/src/Markup/src/style/main.scss
@@ -7,3 +7,6 @@
 /* Компоненты */
 @import "partials/components/main.block";
 @import "partials/components/pastor.block";
+@import "partials/components/banner.block";
+@import "partials/components/text.block";
+@import "partials/components/prayer.block";
