Изображения загружены локально

--- a/src/Markup/src/style/partials/components/banner.block.scss
+++ b/src/Markup/src/style/partials/components/banner.block.scss
@@ -6,10 +6,10 @@
   padding: 160px 0;
 
   &__about-us {
-    background-image: url("https://img.wallpapersafari.com/desktop/1920/1080/44/81/kwHm5q.jpg");
+    background-image: url("../img/about.jpg");
   }
 
   &__prayer {
-    background-image: url("https://threshold-church.com/wp-content/uploads/Threshold-Prayer.jpg");
+    background-image: url("../img/prayer.jpg");
   }
 }
