--- a/src/Markup/src/style/partials/components/main.block.scss
+++ b/src/Markup/src/style/partials/components/main.block.scss
@@ -1,5 +1,5 @@
 .main-block {
-  background-image: url('https://www.gracelutheranlexington.org/wp-content/uploads/2018/01/cropped-IMG_20180131_145555-7.jpg');
+  background-image: url('../img/main.jpg');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
