--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,8 +1,50 @@
 {% extends 'main/base.html.twig' %}
 {% block body %}
 
-    <h1>
-        {{ title }}
-    </h1>
+    <div class="main-block">
+        <div class="container center">
+            <div class="row">
+                <div class="col">
+                    <h1>New Mount Sinai Baptist Church</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="pastor-block">
+        <div class="center">
+            <div class="container">
+                <div class="pastor-block__row">
+                    <div class="pastor-block__item">
+                        <div class="pastor-block__item__wrap">
+                            <h3>Pastor A. Jamale Johnson</h3>
+                            <p>Our congregation is a New Mount Sinai Baptist Church that offers fellowships and
+                                relationships
+                                that promote spiritual growth and wellness for all ages. Our worship service begins at
+                                10:45
+                                a.m. Sunday morning and Sunday School start at 9:30 a.m.
+                                <br>
+                                We highly recommend attending Sunday School and Bible Study.
+                                <br>
+                                Where you will:
+                            </p>
+                            <ul>
+                                <li>Receive practical learning of God’s Word</li>
+                                <li>Interact with other for feedback</li>
+                                <li>Develop an intimate relationship with God</li>
+                                <li>Bond with prayer partners</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="pastor-block__item">
+                        <div class="pastor-block__item__wrap">
+                            <div class="pastor-block__item__wrap__img">
+                                <img src="https://mtsinaifayetteville.com/wp-content/uploads/2020/12/pastorJohnson-683x1024.jpg" alt="Pastor">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
