Интегрирована, в верстку, страница "о церкви"

--- a/templates/main/about.html.twig
+++ b/templates/main/about.html.twig
@@ -1,8 +1,37 @@
 {% extends 'main/base.html.twig' %}
 {% block body %}
-
-    <h1>
-        {{ title }}
-    </h1>
-
+    <div class="banner-block banner-block__about-us">
+        <div class="container center">
+            <div class="row">
+                <div class="col">
+                    <h1>About NMSBC</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="text-block">
+        <div class="container center">
+            <div class="row">
+                <div class="col">
+                    <h3>About NMSBC</h3>
+                    <p>
+                        Our congregation offers fellowships and relationships
+                        that promote spiritual growth and wellness for all ages.
+                        NMSBC has various ministries that offer enrichment.
+                        The Senior Ministry offers activities and times of
+                        fellowship within the congregation.
+                        Other adult ministries are the Women’s Fellowship and Men’s Fellowship.
+                        In addition, the Youth and Children Ministries provide a strong place where
+                        youth can be themselves while learning the plan of God for their lives.
+                        Finally, the Young Adults Ministry, which offers fun times and learning
+                        how to grow in Christ. NMSBC believes in mission and outreach.
+                        It is our goal to extend our arms into the community and provide service for those who are in
+                        need.
+                        NMSBC is a church where everyone can be called by name and have a place to serve.
+                        One of our core values is the belief in Sunday school attendance.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
