Мелкие исправления по верстке

--- a/public/Markup/src/style/partials/template.scss
+++ b/public/Markup/src/style/partials/template.scss
@@ -6,7 +6,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   text-decoration: none;
   font-family: 'Arial', sans-serif;
   color: #FFFFFF;
-  /*transition: 150ms ease-in-out,  transform 150ms ease;*/
+  transition: 150ms ease-in-out,  transform 150ms ease;
   -webkit-appearance: none;
   -moz-appearance: none;
   box-sizing: unset;
