Добавлены гиперссылки в главное меню

--- a/templates/main/base.html.twig
+++ b/templates/main/base.html.twig
@@ -20,10 +20,10 @@
         <div class="header__content">
             <h1 class="header__logo">New Mount Sinai Baptist Church</h1>
             <div class="header__menu">
-                <a class="header__menu__item">HOME</a>
-                <a class="header__menu__item">ABOUT US</a>
-                <a class="header__menu__item">DONATE</a>
-                <a class="header__menu__item">PRAYER REQUEST</a>
+                <a class="header__menu__item" href="{{ path('home') }}">HOME</a>
+                <a class="header__menu__item" href="{{ path('about') }}">ABOUT US</a>
+                <a class="header__menu__item" href="#">DONATE</a>
+                <a class="header__menu__item" href="{{ path('prayer') }}">PRAYER REQUEST</a>
             </div>
         </div>
     </div>
