Свёрстана страница пожертвований

--- a/public/Markup/src/style/main.scss
+++ b/public/Markup/src/style/main.scss
@@ -10,3 +10,4 @@
 @import "partials/components/banner.block";
 @import "partials/components/text.block";
 @import "partials/components/prayer.block";
+@import "partials/components/stripe.donate.block";
