Добавлен переход на страницу пожертвования в меню

--- a/templates/main/base.html.twig
+++ b/templates/main/base.html.twig
@@ -23,7 +23,7 @@
             <div class="header__menu">
                 <a class="header__menu__item" href="{{ path('home') }}">HOME</a>
                 <a class="header__menu__item" href="{{ path('about') }}">ABOUT US</a>
-                <a class="header__menu__item" href="#">DONATE</a>
+                <a class="header__menu__item" href="{{ path('donate') }}">DONATE</a>
                 <a class="header__menu__item" href="{{ path('prayer') }}">PRAYER REQUEST</a>
             </div>
         </div>
