--- a/public/Markup/src/style/partials/components/prayer.block.scss
+++ b/public/Markup/src/style/partials/components/prayer.block.scss
@@ -8,6 +8,13 @@
     }
   }
 
+  &__textarea {
+    &__header {
+      font-size: 16px;
+      color: black;
+    }
+  }
+
   &__submit-button {
     margin-top: 30px;
     background: #fff;
